--- a/scoutbot.cfg.example
+++ b/scoutbot.cfg.example
@@ -6,3 +6,9 @@ support_domain = techsupport.example.com
 max_wait_new_ticket = 600
 max_wait_response_or_close = 1200
 support_calendar_id = XXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX@group.calendar.google.com
+
+[slack]
+api_key = XXXX-XXXXXXXXXXX-XXXXXXXXXXXXXXXXXXXXXXXX
+bot_name = gal
+log_channels = ["gal_testing"]
+channels = ["gal_testing"]
