--- a/scoutbot.cfg.example
+++ b/scoutbot.cfg.example
@@ -7,6 +7,10 @@ max_wait_new_ticket = 600
 max_wait_response_or_close = 1200
 support_calendar_id = XXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX@group.calendar.google.com
 
+support_open_days = [0,1,2,3,4]
+support_open_at   = 05:00
+support_close_at  = 18:00
+
 [slack]
 api_key = XXXX-XXXXXXXXXXX-XXXXXXXXXXXXXXXXXXXXXXXX
 bot_name = gal
