--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,8 @@
 backports.ssl-match-hostname==3.4.0.2
 google-api-python-client==1.4.2
+helpscout==0.0.1
 httplib2==0.9.1
+lxml==4.1.1
 oauth2client==1.5.1
 pyasn1==0.1.8
 pyasn1-modules==0.0.7
